# Closed-Loop-RAG-System

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  GITHUB_DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_demo.sh
data/documents/: sample_api_docs.md  sample_faq.csv  sample_tech_doc.md
src/rag_system/: __init__.py  config.py
src/rag_system/api/: __init__.py  main.py  models.py
src/rag_system/evaluation/: __init__.py  trulens_evaluator.py
src/rag_system/generation/: __init__.py  ollama_client.py  rag_engine.py
src/rag_system/ingestion/: __init__.py  chunker.py  embeddings.py  ingester.py  markitdown_converter.py
src/rag_system/retrieval/: __init__.py
src/rag_system/utils/: __init__.py
src/rag_system/vector_store/: __init__.py  milvus_client.py
tests/: __init__.py  conftest.py  test_setup.py
tests/e2e/: test_e2e.py
tests/e2e/fixtures/: sample.csv  sample.md
tests/integration/: __init__.py  test_api.py  test_ingest_api.py  test_query_api.py
tests/unit/: __init__.py  test_config.py
tests/unit/evaluation/: __init__.py  test_trulens_evaluator.py
tests/unit/generation/: test_ollama_client.py  test_rag_engine.py
tests/unit/ingestion/: test_chunker.py  test_embeddings.py  test_ingester.py  test_markitdown_converter.py
tests/unit/vector_store/: test_milvus_client.py
